Fix alignment

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -260,16 +260,6 @@ ul {
 }
 
 #subHeader {
-  .meta-info-col {
-    p {
-      vertical-align:middle;
-
-      span {
-        vertical-align:middle;
-      }
-    }
-  }
-
   .button-col {
     flex:0 0 calc(50px + #{($gutterWidth / 3) * 2});
     padding:0 #{$gutterWidth / 3};
